rama master, modifi-header, main y footer

--- a/index.html
+++ b/index.html
@@ -3,20 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
 <body>
     <header>
         <h1>Paisajes</h1>
+        <img class="img01" src="/imagen/paisaje1.jpg" alt="lago">
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Precios</a></li>
-                <li><a href="">Articulos</a></li>
-                <li><a href="">Contactos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="precios.html">Precios</a></li>
+                <li><a href="articulo.html">Articulos</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
             </ul>
         </nav>
+        <br>
     </header>
+    <br>
+    <main>
+        <section>
+            <h2>Información sobre los Paisajes</h2>
+            <br>
+            <p>Los paisajes son el resultado de la interacción entre elementos naturales como montañas, ríos, vegetación, clima y elementos humanos como construcciones, caminos o cultivos. Cada paisaje es único y refleja las características geográficas, ecológicas y culturales de una región. Se pueden clasificar en diferentes tipos, como paisajes naturales, rurales y urbanos, dependiendo del grado de intervención humana que presenten.</p>
+            <br>
+            <p>Los paisajes naturales, por ejemplo, se encuentran en zonas donde la influencia del ser humano es mínima o nula, como selvas, desiertos o cordilleras. Estos espacios son valiosos por su biodiversidad y por los servicios ecosistémicos que brindan, como la regulación del clima o la conservación del agua. Por otro lado, los paisajes rurales y urbanos son el resultado de la transformación del entorno natural para actividades como la agricultura, la ganadería o la vida en ciudades.</p>
+            <br>
+            <p>La importancia de los paisajes no solo radica en su valor ecológico, sino también en su dimensión cultural y emocional. Muchas comunidades desarrollan un sentido de pertenencia hacia el entorno que habitan, y los paisajes influyen en su identidad, tradiciones y formas de vida. Además, los paisajes atractivos tienen un gran potencial turístico, lo que puede generar desarrollo económico si se gestionan de manera sostenible.</p>
+            <br>
+                <div class="contenedor">
+                <img class="img02" src="/imagen/paisaje2.jpg" alt="montañas">
+                </div>
+            <br>
+            <h2>Video sobre datos acerca de los paisajes</h2>
+            <div class="contenedor">
+            <iframe class="vid01" width="560" height="315" src="https://www.youtube.com/embed/3e_jH51wCp0?si=MmHYkQboHetN3YCi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+    </main>
+    <br>
+    <br>
+<footer>
+    <p>@ Derechos de autor 2025</p>
+    <p>infodigital25@gmail.com</p>
+</footer>
 </body>
 </html>
