rama precios, tabla de productos

--- a/precios.html
+++ b/precios.html
@@ -4,8 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Precios</title>
+    <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Paisajes</h1>
+        <img class="img01" src="/imagen/paisaje1.jpg" alt="lago">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="precios.html">Precios</a></li>
+                <li><a href="articulo.html">Articulos</a></li>
+                <li><a href="contactos.html">Contactos</a></li>
+            </ul>
+        </nav>
+        <br>
+    </header>
+    <br>
+    <main>
+        <section>
+            <table border="1">
+                <caption>Tabla de viajes para conocer los mejores paisajes</caption>
+                <tr>
+                    <th>Número</th>
+                    <th>Lugar</th>
+                    <th>Valor de viaje</th>
+                    <th>Imagen</th>
+                </tr>
+                <tr>
+                    <td>01</td>
+                    <td>Bogotá</td>
+                    <td>$1.500.000</td>
+                    <td><img class="immg" src="/imagen/paisaje3.jpg" alt="Bogotá"></td>
+                </tr>
+                <tr>
+                    <td>02</td>
+                    <td>Cali</td>
+                    <td>1.200.000</td>
+                    <td><img class="immg" src="/imagen/Paisaje4.jpg" alt="Cali"></td>
+                </tr>
+                <tr>
+                    <td>03</td>
+                    <td>Cartagena</td>
+                    <td>1.350.000</td>
+                    <td><img class="immg" src="/imagen/paisaje5.jpg" alt="Cartagena"></td>
+                </tr>
+            </table>
+        </section>
+    </main>
+<footer>
+    <p>@ Derechos de autor 2025</p>
+    <p>infodigital25@gmail.com</p>
+</footer>
 </body>
 </html>
